<resources>
    <string name="app_name">Decisions</string>
    <string name="btEnter">Enter</string>
    <string name="btRegister">Sign in</string>
    <string name="btAccept">Accept</string>
    <string name="search_persons">Search persons</string>
    <string name="add_friends">Add friends</string>
    <string name="register">Sign in</string>
    <string name="email_adress">Email address</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="settings"> Settings</string>
    <string name="account_settings"> Account settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_password">Change password</string>
    <string name="log_out"> Log out</string>
    <string name="manage_friends"> Manage friends</string>
    <string name="friend_requests">Friend requests</string>
    <string name="remove_friends">Remove friends</string>
    <string name="app_settings"> App settings</string>
    <string name="change_language">Change language</string>
    <string name="about_decisions">About Decisions</string>
    <string name="creators">Creators</string>
    <string name="take_decision">Take decision</string>
    <string name="write_your_decision">Write your decision</string>
    <string name="write_here">Write here...</string>
    <string name="connect_with_friend">Connect with friend</string>
    <string name="play">Play</string>
    <string name="login">Log in</string>
    <string name="keep_signed_in">Keep signed in</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_username">New username</string>
    <string name="new_email_adress">New email address</string>
    <string name="search_friends">Search friends</string>
    <string name="select_your_language">Select your language</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="friends">Friends</string>
    <string name="catalan">Catalan</string>
    <string name="hindi">Hindi</string>
    <string name="german">German</string>
    <string name="portuguese">Portuguese</string>
    <string name="you_lost">You lost</string>
    <string name="you_win">You win</string>
    <string name="draw">Draw</string>
    <string name="time">Time</string>
    <string name="you_decide">You decide</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="elements">Elements</string>
    <string name="games_guide">Games guide</string>
    <string name="elements_guide">Welcome to the exciting game \"Elements\"! In this game, you must choose wisely between water, fire and ice to face your opponent. But beware, each element has its weakness and strength. \n\nWater will extinguish fire, fire will melt ice and ice will freeze water - it\'s a duel of gods! \nYou will have only 15 seconds to make your decision, so think fast. If you fail to choose in time, the choice will be random. But don\'t give up if you\'re tied, the battle will continue until there\'s a clear winner or loser! \n\nGet ready to feel the thrill of the elements on your skin! Will you be the one chosen to master the three elements and win the game? Come on, don\'t be left behind!</string>
    <string name="you_are_player">Player</string>
    <string name="you_are_goalkeeper">Goalkeeper</string>
    <string name="penalties_guide">Welcome to \"Penalties\" an exciting experience that will allow you to test your skills as a player and goalkeeper. \n\nIn this game, you will take turns shooting and saving penalties in each round. You will have five shooting direction options: center, left, top left, right, and top right. Your goal will be to score more goals than your opponent to win the game. \n\nIf after 10 rounds there is no winner, the game will go into a sudden death round, where the first player to score a goal will win. Each round has a 15 second timer so you can select your move, but if you don\'t, the game will select an option for you automatically.\n\nDo you dare to test your skills and become the champion of the penalty shootout? Start playing right now and enjoy the thrill of soccer!</string>
    <string name="penalties">Penalties</string>
    <string name="actual_password">Actual password</string>
    <string name="btCancel">Cancel</string>
    <string name="btConfirm">Confirm</string>
    <string name="change_email">Change email</string>
    <string name="actual_email">Actual email</string>
    <string name="choose_modality">Choose modality</string>
    <string name="write_first_decision">Write first decision</string>
    <string name="write_second_decision">Write second decision</string>
    <string name="confirm_remove">Are you sure you want to remove this friend?</string>
    <string name="confirm_requestfriend" >Are you sure you want to accept this friend request?</string>
    <string name="confirm_addfriend">Are you sure you want to add this friend?</string>
    <string name="you_don_t_have_more_friends">You don\'t have friends aggregates</string>
    <string name="you_don_t_have_more_requests">You don\'t have requests</string>
    <string name="question_quiz">Question Quiz</string>
    <string name="quiz_guide">Welcome to \"Question Quiz\", the thrilling mini-game where you\'ll put your knowledge to the test! Are you ready for the ultimate challenge? \n\nYou\'ll have to answer between 5 and 10 random trivia questions from various categories, with 4 possible answers but only one correct. But beware, you only have 30 seconds to select your answer! If time runs out, you\'ll lose a life. \n\nBut don\'t worry, you\'ll have a few lives to spare. If you manage to answer all the questions correctly without losing all your lives, you win! And when playing online, the fastest player will come out on top! Keep an eye on the top left corner of your screen to see which question you\'re on and how many you have left to answer. \n\nSo, are you ready to take on the challenge and show off your knowledge? Let\'s play Question Quiz!</string>
    <string name="geography">Geography</string>
    <string name="science">Science</string>
    <string name="art">Art</string>
    <string name="tecno">Technology</string>
    <string name="astro">Astrology</string>
    <string name="correct_username">Enter correct username</string>
    <string name="username_empty">Username is empty</string>
    <string name="password_empty">Password is empty</string>
    <string name="password_correct">Enter correct password</string>
    <string name="wait_login">Please wait while login...</string>
    <string name="username_exists">Username exist</string>
    <string name="register_succesful">Register succesful</string>
    <string name="format_email">Enter correct format Email</string>
    <string name="equal_password">Password not matched both field</string>
    <string name="geo1">What is the largest continent in the world by area?</string>
    <string name="geo2">What is the smallest country in the world?</string>
    <string name="geo3">What is the highest mountain in the world?</string>
    <string name="geo4">What is the largest country in South America?</string>
    <string name="geo5">What is the capital of Egypt?</string>
    <string name="geo6">What is the currency of Brazil?</string>
    <string name="geo7">What is the capital of Australia?</string>
    <string name="geo8">Which city is the capital of Japan?</string>
    <string name="geo9">Which river is the longest in the world?</string>
    <string name="sci1">Which famous physicist developed the theory of relativity?</string>
    <string name="sci2">What is the largest organ in the human body?</string>
    <string name="sci3">What is the chemical symbol for gold?</string>
    <string name="sci4">Who discovered penicillin?</string>
    <string name="art1">Which famous artist painted the Mona Lisa?</string>
    <string name="art2">Who painted the famous work \'Starry Night\'?</string>
    <string name="art3">Who wrote the novel \'To Kill a Mockingbird\'?</string>
    <string name="art4">Who wrote the play \'Romeo and Juliet\'?</string>
    <string name="art5">Who directed the movie \'Jaws\'?</string>
    <string name="tec1">Which company owns the Android?</string>
    <string name="tec2">Which company owns the Iphone?</string>
    <string name="tec3">What app was founded in 2005?</string>
    <string name="tec4">Which one is not a programming language?</string>
    <string name="ast1">Which planet in our solar system is the largest?</string>
    <string name="ast2">What is the smallest planet in our solar system?</string>
    <string name="request_sent">Request sent to:</string>
    <string name="friend_deleted">\"The friend has been deleted: \"</string>
    <string name="accept_friend">\"Accepted friend: \"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share_your_decision_with_your_friends_posting_a_photo">Share your decision with your friends posting a photo</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="result_game">Result game</string>
    <string name="sorry_only_the_winner_can_publish_the_decision_you_have_made_n_nperhaps_next_time_you_ll_win">Sorry, only the winner can publish the decision you have made. \n\nPerhaps next time you\'ll win.</string>
    <string name="you_lost_against_the_robot_can_you_share_its_decision_by_posting_a_photo">You lost against the robot, can you share its decision by posting a photo</string>
    <string name="post_this_photo">Post this photo?</string>
    <string name="ast3">What is a supernova?</string>
    <string name="ast4">What is known as a mass of celestial, diffuse and luminous cosmic matter, which has the appearance of a cloud?</string>
    <string name="htr1">Who was the first Roman emperor?</string>
    <string name="htr2">In what year did the French Revolution take place?</string>
    <string name="htr3">What was the first country to send an artificial satellite into space?</string>
    <string name="htr4">What event triggered the entry of the United States into World War II?</string>
    <string name="htr5">Who was the leader of the 1917 Russian Revolution?</string>
    <string name="htr6">What important invention was patented by Alexander Graham Bell in 1876?</string>
    <string name="histo">History</string>
    <string name="sci5">What is the process by which plants convert solar energy into chemical energy?</string>
    <string name="sci6">What is the name of the process by which cells divide into two identical daughter cells?</string>
    <string name="tec5">Which of the following materials is the best electrical conductor?</string>
    <string name="tec6">What kind of energy is used to run electric vehicles?</string>
    <string name="sci7">What is the fastest animal in the world?</string>
    <string name="sci8">How many bones has the human body?</string>
    <string name="sci9">How many layers does the Earth have?</string>
    <string name="sci10">What is the largest ocean in the world?</string>
    <string name="spt1">What is the maximum number of players on a soccer team?</string>
    <string name="spt2">What is the height of a standard basketball hoop?</string>
    <string name="spt3">What is the name of the first major tennis tournament of the year?</string>
    <string name="spt4">In American football, how many points is a touchdown worth?</string>
    <string name="spt5">What is the name of the most famous cycling race in the world?</string>
    <string name="do_you_have_an_account">Don\'t have an account?</string>
    <string name="recover_your_password">Recover your password?</string>
    <string name="cc_license">Creative commons license</string>
</resources>