<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginAndRegister.MainActivity"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_gravity="center">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/semiCircleImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/semi_circle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintWidth_percent="1.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            >

            <ImageView
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:src="@drawable/logo_decisions"
                android:tint="@color/white"/>

            <TextView
                android:text="@string/login"
                android:textSize="32dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                >

            </TextView>

        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="50dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp">

           <EditText
               android:id="@+id/etUsername2"
               android:layout_width="match_parent"
               android:layout_height="55dp"
               android:textSize="18dp"
               android:ems="10"
               android:hint="@string/username"
               android:inputType="textPersonName"
               android:selectAllOnFocus="true"
               android:singleLine="true"
               android:background="@drawable/textbox_style"
               android:fontFamily="@font/montserrat_medium"
               android:drawableStart="@drawable/custom_username_icon"
               android:drawablePadding="5dp"
               android:paddingStart="12dp"
               android:paddingEnd="12dp"
               android:textColor="@color/black"
               android:textColorHint="@android:color/darker_gray"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/light_blue"
                android:layout_gravity="center"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:minHeight="50dp"
                android:background="@drawable/textbox_style"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18dp"
                android:drawableStart="@drawable/custom_password_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/montserrat_semibold"
                android:paddingStart="5dp"
                android:text="@string/keep_signed_in"
                android:textColor="@color/black"
                android:textSize="15dp"></CheckBox>


            <Button
                android:id="@+id/btLogin"
                android:text="@string/btEnter"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:background="@drawable/button_style"
                android:fontFamily="@font/montserrat_semibold"
                android:stateListAnimator="@null"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"

                    >
            </Button>


            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recover_your_password"
                android:textSize="15dp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/dark_blue"
                android:layout_gravity="center"
                android:drawablePadding="5dp"
                android:layout_marginTop="20dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textAlignment="center"
                ></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_an_account"
                android:textSize="15dp"
                android:fontFamily="@font/montserrat_semibold"
                android:textColor="@color/black"
                android:layout_gravity="center"
                ></TextView>

                <Button
                    android:id="@+id/btRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textSize="16dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/dark_blue"
                    android:background="@color/transparent"
                    android:textAllCaps="false"
                    android:layout_gravity="center"
                    ></Button>

            </LinearLayout>

        </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>