<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/header"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/settings"
            android:textSize="32dp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_semibold"
            android:textAllCaps="true"
            >
        </TextView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/footer"

        android:gravity="center"
        android:layout_gravity="center"
        >

        <LinearLayout
            android:id="@+id/footerButtons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btSettings"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/custom_settings_icon"
                android:contentDescription="btSettings"
                >

            </Button>

            <Button
                android:id="@+id/btHome"
                android:layout_width="95dp"
                android:layout_height="90dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/custom_home_icon"
                android:contentDescription="buttonHome"

                >
            </Button>

            <Button
                android:id="@+id/btFriends"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_friends_icon"
                android:contentDescription="btFriends"

                ></Button>
        </LinearLayout>

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:fillViewport="true"
        android:layout_centerHorizontal="true"
        android:overScrollMode="never"
        android:scrollbars="none">
        <LinearLayout
            android:id="@+id/myLayout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            >

            <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_accountsettings"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/account_settings"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="22dp"
                ></TextView>

            <Button
                android:id="@+id/btProfile"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/edit_profile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null"
                >

            </Button>

            <View
                android:id="@+id/line"
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/medium_blue"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>


            <Button
                android:id="@+id/btPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/change_password"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null">

            </Button>



            <View
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/medium_blue"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/btEmail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/change_email"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null">

            </Button>



            <View
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/medium_blue"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>


            <Button
                android:id="@+id/btLogout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableStart="@drawable/ic_logout"
                android:drawableEnd="@drawable/custom_right_icon"
                android:drawablePadding="5dp"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:stateListAnimator="@null"
                android:paddingStart="18dp"
                >

            </Button>



        <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_appsettings"
                android:drawablePadding="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/app_settings"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="22dp">

            </TextView>

            <Button
                android:id="@+id/btLanguage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableStart="@drawable/ic_language"
                android:drawablePadding="5dp"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/change_language"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null">

            </Button>

            <View
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/medium_blue"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/btExplication"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/games_guide"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null">

            </Button>


            <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:drawableStart="@drawable/ic_info"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/about_decisions"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="22dp"></TextView>

            <Button
                android:id="@+id/btCreators"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/creators"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null"
                ></Button>

            <View
                android:layout_width="255dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/medium_blue"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Button
                android:id="@+id/btLicense"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style2"
                android:drawableEnd="@drawable/custom_right_icon"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="left|center_vertical"
                android:text="@string/cc_license"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="19dp"
                android:paddingStart="18dp"
                android:stateListAnimator="@null"
                ></Button>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>